# netrender

./: Cargo.toml
examples/: Cargo.toml  multiwindow.rs  wgpu_hal_device.rs  wgpu_headless.rs
netrender/: Cargo.toml
netrender-notes/: 2026-04-30_netrender_design_plan.md  2026-05-01_vello_rasterizer_plan.md  2026-05-04_feature_roadmap.md  2026-05-05_compositor_handoff_path_b_prime.md  2026-05-06_webgl_over_wgpu_plan.md  PROGRESS.md
netrender/src/: batch.rs  external_texture.rs  glyph_atlas.rs  hit_test.rs  interpolate.rs  lib.rs  profiling.rs  rasterizer.rs  registry.rs  render_graph.rs  scene.rs  tile_cache.rs  vello_rasterizer.rs  vello_tile_rasterizer.rs
netrender/src/renderer/: init.rs  mod.rs
netrender/tests/: op_list_painter_order.rs  p10a_text.rs  p10b_advance_width.rs  p10b_eviction.rs  p10b_outline_font.rs  p10b_subpixel_policy.rs  p10b_text.rs  p10b_tiled_subpixel.rs  p10prime_a_glyph_api.rs  p10prime_b_glyph_render.rs  p11prime_b_paths.rs  p11prime_c_box_shadow.rs  p12b_nested_layers.rs  p12prime_a_scene_compositing.rs  p13prime_path_b_present_plumbing.rs  p1prime_oracle_regreen.rs  p1prime_vello_first_light.rs  p2prime_vello_rects.rs  p3_transforms.rs  p5prime_b_chromatic_tint.rs  p5prime_c_register_texture.rs  p6_render_graph.rs  p7prime_renderer_integration.rs  p8d_n_stop_gradient.rs  p9a_clip_rectangle.rs  p9b_box_shadow.rs  p9c_clip_fast_path.rs  pa1_op_list_inspector.rs  pa2_scene_capture_replay.rs  pa3_tile_dirty_tracking.rs  pa4_frame_profiler.rs  pb2_scroll_frame.rs  pc1_stroke_decorations.rs  pc2_pattern_op.rs  pc3_alpha_mask_layer.rs  pc4_variable_fonts.rs  pd1_backdrop_filter.rs  pe2_scene_fragment.rs  pr1_per_glyph_hit_metrics.rs  pr4_simple_rasterizer_image_cache.rs  (+1 more)
netrender_device/: Cargo.toml
netrender_device/src/: adapter.rs  binding.rs  compositor.rs  core.rs  lib.rs  pipeline.rs  shader.rs
netrender_device/src/shaders/: brush_gradient.wgsl  cs_clip_rectangle.wgsl  ps_text_run.wgsl  ps_text_run_dual_source.wgsl
netrender_text/: Cargo.toml
netrender_text/src/: lib.rs
netrender_text/tests/: pb1_selection_and_caret.rs  pb3_color_emoji_probe.rs  pr6_inline_box_walker.rs  shape_and_paint.rs
notes/: 2026-04-30_p0_method_assignment.md  2026-04-30_wgpu_device_plan.md
webrender/: Cargo.toml  build.rs
webrender_build/: Cargo.toml
wgpu-minimal-docs/: PROGRESS.md
wr-wgpu-notes/: 2026-03-01_webrender_wgpu_renderer_implementation_plan.md  2026-04-07_p14_progress_report.md  2026-04-08_live_full_reftest_confirmation.md  2026-04-18_spirv_shader_pipeline_plan.md  2026-04-18_upstream_cherry_pick_plan.md  2026-04-21_spirv_pipeline_reset_execution.md  2026-04-22_upstream_cherry_pick_reevaluation.md  2026-04-26_track3_legacy_assembly_isolation_lane.md  2026-04-27_dual_servo_parity_plan.md  (+6 more)
(+203 files in other folders)
