[package]
name = "netrender"
version = "0.0.1"
license = "MPL-2.0"
description = "wgpu-native renderer shell (Phase 0.5 split per netrender-notes/2026-04-30_netrender_design_plan.md)"
edition = "2018"

[dependencies]
log = "0.4"
wgpu = "29"
netrender_device = { path = "../netrender_device" }
# Phase 10a.2: pure-Rust glyph rasterization (outline + bitmap).
# Per the design plan §5 "Glyph rasterization" decision, swash is
# adopted as the rasterizer behind a thin RasterContext wrapper.
# Outline+hinting parity with FreeType; bitmap-strike fonts (Proggy)
# also handled.
swash = "0.2"
zeno = "0.3"

[dev-dependencies]
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
