[package]
name = "netrender_text"
version = "0.0.1"
license = "MPL-2.0"
description = "parley → netrender::Scene glyph-run adapter"
edition = "2021"

[dependencies]
netrender = { path = "../netrender" }
parley.workspace = true

[dev-dependencies]
wgpu = { workspace = true, features = ["std", "parking_lot", "dx12", "metal", "vulkan", "wgsl"] }
